# trafficmonitorcpp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  TrafficMonitor.cpp  TrafficMonitor.h  Vehicle.h  main.cpp
tests/: CMakeLists.txt  test_TrafficMonitor.cpp  test_main.cpp
